<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/background_tiled" >

    <TextView
        android:id="@+id/dialog_guessing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/dialog_text_view_guessing_title"
        android:textColor="#FFFF00"
        android:textSize="@dimen/title_font_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFFF00"
        />

    <TextView
        android:id="@+id/dialog_guessing_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/dialog_text_view_guessing_info"
        android:textColor="@android:color/white"
        android:textSize="@dimen/menu_font_size" />

    <Button 
        android:id="@+id/dialog_guessing_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_main_menu_yellow"
        android:text="@string/dialog_button_ok"
        android:textSize="@dimen/menu_font_size" />

</LinearLayout>
