<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/background_tiled" >

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_view_paired_devices"
        android:visibility="gone"
        android:textColor="#FFFF00"
        android:textSize="@dimen/large_font_size"
        android:layout_margin="10dp" />

    <View
        android:id="@+id/title_paired_devices_underline"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:visibility="gone"
        android:background="#FFFF00" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_view_other_devices"
        android:visibility="gone"
        android:textColor="#FFFF00"
        android:textSize="@dimen/large_font_size"
        android:layout_margin="10dp" />

    <View
        android:id="@+id/title_new_devices_underline"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:visibility="gone"
        android:background="#FFFF00" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:layout_weight="2" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_main_menu_blue"
        android:layout_marginTop="30dp"
        android:text="@string/button_scan"
        android:textColor="#000000"
        android:textSize="@dimen/menu_font_size" />

</LinearLayout>